argo/argo/base/argo-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-server
spec:
  selector:
    app: argo-server
  ports:
    - port: 2746
      targetPort: 2746
      name: web
