argo/argo/base/argo-server-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: argo-server
  namespace: opendatahub
  labels:
    app: argo
spec:
  port:
    targetPort: web
  to:
    kind: Service
    name: argo-server
